[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scenes/Prefabs/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Guardian/Idle/Gaurdian_idle_back.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Guardian/R_walk/Gaurdian_Rwalk1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Guardian/R_walk/Gaurdian_Rwalk2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Guardian/R_walk/Gaurdian_Rwalk3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Guardian/R_walk/Gaurdian_Rwalk4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Guardian/Forward_walk/Gaurdian_fwalk3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Guardian/Forward_walk/Gaurdian_fwalk4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Guardian/Forward_walk/Gaurdian_fwalk1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Guardian/Forward_walk/Gaurdian_fwalk2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Guardian/Idle/Gaurdian_idle_r.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Guardian/Idle/Gaurdian_idle_Forward.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Guardian/L_walk/Gaurdian_Lwalk1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Guardian/L_walk/Gaurdian_Lwalk2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Guardian/L_walk/Gaurdian_Lwalk3.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Guardian/L_walk/Gaurdian_Lwalk4.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Guardian/Idle/Gaurdian_idle_L.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Guardian/Back_walk/Gaurdian_bwalk1.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Guardian/Back_walk/Gaurdian_bwalk2.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Guardian/Back_walk/Gaurdian_bwalk3.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Guardian/Back_walk/Gaurdian_bwalk4.png" type="Texture" id=21]
[ext_resource path="res://SFX/Steps/Grass_L.wav" type="AudioStream" id=23]
[ext_resource path="res://SFX/Steps/Grass_R.wav" type="AudioStream" id=24]
[ext_resource path="res://SFX/Steps/snd_step_stone1.wav" type="AudioStream" id=25]
[ext_resource path="res://SFX/Steps/snd_step_stone2.wav" type="AudioStream" id=26]
[ext_resource path="res://SFX/Steps/snd_step_giftplane1.wav" type="AudioStream" id=27]
[ext_resource path="res://SFX/Steps/snd_step_giftplane2.wav" type="AudioStream" id=28]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "f_idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "f_walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "b_idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "r_walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "l_idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "b_walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "l_walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "r_idle",
"speed": 0.0
} ]

[sub_resource type="GDScript" id=3]
script/source = "extends AnimatedSprite3D
export var lockZ = true
var camera_pos = Vector3()
func _process(delta):
	camera_pos = get_viewport().get_camera().global_transform.origin
	if lockZ:
		camera_pos.z = camera_pos.z + 1000
	look_at(camera_pos, Vector3.UP)
"

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
script = ExtResource( 1 )

[node name="target" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.25225e-08, -0.744029 )

[node name="Camera" type="Camera" parent="target"]
transform = Transform( 1, 0, 0, 0, -0.324891, 0.945751, 0, -0.945751, -0.324891, 0, 7.16781, -2.06221 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.75, 0, 0, 0 )
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
flip_h = true
pixel_size = 0.04
shaded = true
frames = SubResource( 2 )
animation = "f_walk"
frame = 1
playing = true
script = SubResource( 3 )

[node name="groundray" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.005, 0.592 )
enabled = true

[node name="grassL" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 23 )

[node name="grassR" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 24 )

[node name="stoneL" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 25 )

[node name="stoneR" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 26 )

[node name="floorL" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 27 )

[node name="floorR" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 28 )
